# assetbrain_ai_assistant

./: .gitignore  CONTRIBUTING.md  DEMO_SCRIPT.md  JUDGING_CRITERIA_MATRIX.md  PROJECT_OVERVIEW_FOR_TEAM.md  PS8_Master_Prompts_Opus.md  QUALITY_REPORT.md  README.md  SECURITY.md  azure_deploy.ps1  deploy.ps1  package.json  pyproject.toml  render.yaml  vercel.json
api/: index.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/agents/: compliance.py  copilot.py  maintenance.py  models.py
backend/app/extraction/: pipeline.py
backend/app/graph/: loader.py
backend/app/ingestion/: parser.py  router.py  spreadsheet.py  text.py  vision.py
backend/app/models/: domain.py  graph.py
backend/app/retrieval/: engine.py  models.py
backend/tests/: test_agents.py  test_extraction.py  test_ingestion.py  test_main.py  test_retrieval.py
backend/tests/fixtures/: adversarial.txt  data.csv  normal.txt
backend/unified_asset_reasoning_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ARCHITECTURE.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/api/: index.py
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/components/: CitationChip.tsx  ComplianceAlert.tsx  ImpactCalculator.jsx  ProductUIMockup.jsx  RecommendationCard.tsx
